--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,27 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:\n",
-      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
-      "For more information, please see:\n",
-      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
-      "  * https://github.com/tensorflow/addons\n",
-      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
-      "If you depend on functionality not listed there, please file an issue.\n",
-      "\n",
-      "WARNING:tensorflow:From <ipython-input-3-3606485d8aa0>:39: load_csv_with_header (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.data instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
@@ -101,31 +83,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gini 1 1 0.6470588235294118\n",
-      "gini 2 9 0.6764705882352942\n",
-      "gini 3 10 0.7352941176470589\n",
-      "gini 3 14 0.7647058823529411\n",
-      "gini 5 10 0.7941176470588236\n",
-      "gini 6 8 0.8235294117647058\n"
+      "1 1 1 0.6470588235294118\n",
+      "1 1 2 0.6764705882352942\n",
+      "1 6 6 0.7058823529411765\n",
+      "1 7 1 0.7647058823529411\n",
+      "2 7 1 0.7941176470588235\n",
+      "2 7 2 0.8235294117647058\n",
+      "3 3 2 0.8529411764705882\n",
+      "3 8 3 0.8823529411764706\n",
+      "4 8 2 0.9117647058823529\n",
+      "5 8 3 0.9411764705882353\n"
      ]
     }
    ],
    "source": [
-    "accu2 = 0\n",
-    "for i in ['gini', 'entropy']:\n",
-    "    for j in range(1,11):\n",
-    "        for k in range(1,23):\n",
-    "            tree = DecisionTreeClassifier(criterion = i, max_depth=j, random_state=0, splitter='best', max_features=k)\n",
-    "            tree.fit(X_train, y_train)\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
-    "            accu = (tree.score(X_test1, y_test1)+tree.score(X_test2, y_test2))/2\n",
+    "accu2 = 0\n",
+    "for i in range(1,11):\n",
+    "    for j in range(1,23):\n",
+    "        for k in range(1,51):\n",
+    "            clf = RandomForestClassifier(max_depth=i, random_state=0, max_features=j, n_estimators=k)\n",
+    "\n",
+    "            clf.fit(X_train, y_train)\n",
+    "\n",
+    "            y_pred1 = clf.predict(X_test1)\n",
+    "            y_pred2 = clf.predict(X_test2)\n",
+    "\n",
+    "            accu = (metrics.accuracy_score(y_test1, y_pred1)+metrics.accuracy_score(y_test2, y_pred2))/2\n",
+    "\n",
     "            if accu2 < accu:\n",
     "                accu2 = accu\n",
     "                print(i, j, k, accu2)"
@@ -133,40 +127,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=6,\n",
-       "            max_features=8, max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "            min_impurity_split=None, min_samples_leaf=1,\n",
-       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "            presort=False, random_state=0, splitter='best')"
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=5, max_features=3, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=None,\n",
+       "            oob_score=False, random_state=8, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tree = DecisionTreeClassifier(criterion = 'gini', max_depth=6, random_state=0, splitter='best', max_features=8)\n",
-    "tree.fit(X_train, y_train)"
+    "clf = RandomForestClassifier(max_depth=5, random_state=8, max_features=3)\n",
+    "\n",
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_pred = tree.predict(df)\n",
+    "new_pred = clf.predict(df)\n",
     "\n",
     "df['pred'] = new_pred\n",
     "\n",
-    "df.to_csv('./cibersort_decision_tree_pred.csv')"
+    "df.to_csv('./cibersort_random_forest_pred.csv')"
    ]
   }
  ],
